modularization, try catch, logging, configuration, unit testing.

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 TWILIO_ACCOUNT_SID = AC5bebb364e72a0f06956bc17636241f44
 TWILIO_AUTH_TOKEN = e5bacc7cf94893d34bf4774121616b52
+FROM_NUMBER = whatsapp:+14155238886
+TO_NUMBERS = whatsapp:+573105450929,whatsapp:+573106186669
+PRODUCTS = [{"nombre": "Huggies Toallitas Húmedas Ultra Confort 8 Paquetes / 80 Unidades", "url": "https://www.pricesmart.com/site/co/es/pagina-producto/454448"}, {"nombre": "Similac 2 Prosensitive Formula Infantil Etapa 2, 6 Unidades / 350 g", "url": "https://www.pricesmart.com/site/co/es/pagina-producto/345293"}, {"nombre": "Member´s Selection Lavaloza Líquido Biodegradable 3 L / 101.4 oz", "url": "https://www.pricesmart.com/site/co/es/pagina-producto/322046"}]
